<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item_sort" android:title="@string/item_sort">
    	<menu>
	        <group android:id="@+id/group_sort" android:checkableBehavior="single">
	        	<item android:title="@string/item_by_name" android:id="@+id/item_by_name" />
	        	<item android:title="@string/item_by_package" android:id="@+id/item_by_package" />
	        	<item android:title="@string/item_by_layout" android:id="@+id/item_by_layout" android:checked="true"/>
	        </group>
        </menu>
    </item>
    <item android:id="@+id/item_filter" android:title="@string/item_filter" />
    <item android:id="@+id/item_batch" android:title="@string/item_batch" />
    <item android:id="@+id/item_history" android:title="@string/item_history" />
    <item android:id="@+id/item_setting" android:title="@string/item_setting" />
</menu>
